...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

<!--    https://stackoverflow.com/questions/23358822/how-to-custom-switch-button-->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/Switch"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:textOff="Off"
        android:textOn="On"
        app:showText="true"
        android:textSize="60sp"
...
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="Low Battery Mode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_status"
        app:layout_constraintBottom_toTopOf="@id/wifi"
    />

    <ImageButton
        android:id="@+id/wifi"
        android:layout_width="70dp"
        android:layout_height="70dp"
...
