<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SSID"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="SSID"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:textColor="#4d4d4d"
        />
        <TextView
            android:id="@+id/BSSID"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="BSSID"
            android:layout_marginLeft="10dp"
            android:padding="2dp"
        />
    </LinearLayout>

    <ImageView
        android:id="@+id/connected"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_wifi_24"
    />

    <ImageView
        android:id="@+id/saved"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_save_24"
    />

    <TextView
        android:id="@+id/signal"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="Signal"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
    />

</LinearLayout>